bpy.ops.image.clipboard_paste() causing crashes in 3dview , image editor have no problem. #121108

Closed
opened 2024-04-26 08:52:13 +02:00 by ericlai · 2 comments

System Information
Operating system:
windows 11
Graphics card:
4090

Blender Version
Broken: 4.1.0 release , 3.6.2 release
Worked:

bpy.ops.image.clipboard_paste() causing crashes in 3dview , image editor have no problem.

Based on the default startup
after press win+s then screen capture image to clipboard
then mouse active in 3d viewport, press f3 then type paste image,press enter will causing crashes

image

**System Information** Operating system: windows 11 Graphics card: 4090 **Blender Version** Broken: 4.1.0 release , 3.6.2 release Worked: bpy.ops.image.clipboard_paste() causing crashes in 3dview , image editor have no problem. Based on the default startup after press win+s then screen capture image to clipboard then mouse active in 3d viewport, press f3 then type paste image,press enter will causing crashes ![image](/attachments/dbb58940-9165-4b15-a936-7c2052dd533e)
ericlai added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-04-26 08:52:14 +02:00

Confirmed and this is indeed broken from 3.6, when this operator was introduced[1], until now. IMAGE_OT_clipboard_paste expects to be in the Image editor space and doesn't handle being in the 3D view.

[1] 39bcf6bdc9

Confirmed and this is indeed broken from 3.6, when this operator was introduced[1], until now. `IMAGE_OT_clipboard_paste` expects to be in the Image editor space and doesn't handle being in the 3D view. [1] 39bcf6bdc9078a97f3ae1a4a944e92683d865498
Member
@Harley ^
Harley Acheson self-assigned this 2024-04-26 17:18:07 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-26 19:58:04 +02:00
Harley Acheson added this to the User Interface project 2024-04-28 17:58:23 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#121108
No description provided.