Fix #121108: Improved Poll Function for IMAGE_OT_clipboard_paste

Ensure that the current area is an Image Editor before allowing
clipboard paste, since that will fail.

Pull Request: https://projects.blender.org/blender/blender/pulls/121142